[gd_scene load_steps=2 format=3 uid="uid://treasure_chest_scene"]

[ext_resource type="Script" path="res://scripts/treasure_chest.gd" id="1_script"]

[node name="TreasureChest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.85)

[node name="ChestContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 100)

[node name="ChestSprite" type="TextureRect" parent="ChestContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="ChestIcon" type="Label" parent="ChestContainer/ChestSprite"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 80
text = "üéÅ"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TapLabel" type="Label" parent="ChestContainer"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = 20.0
offset_right = 100.0
offset_bottom = 60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0.84, 0.34, 1)
theme_override_font_sizes/font_size = 24
text = "Antippen!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CardsContainer" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContinueButton" type="Button" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -120.0
offset_right = 100.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 24
text = "Weiter"

[node name="ImageViewer" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ViewerBackground" type="ColorRect" parent="ImageViewer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.95)

[node name="ViewerImage" type="TextureRect" parent="ImageViewer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1
stretch_mode = 5

[node name="CloseButton" type="Button" parent="ImageViewer"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 70.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 24
text = "X"
